--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
     </nav>
     
     <main>
+        <h2>Estrategias de viaje de vacaciones</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cumque quae amet eos deleniti dicta, hic aliquam laborum itaque. Impedit, animi cupiditate sit repudiandae harum hic illum praesentium asperiores, non dicta sapiente neque, fugiat eaque architecto facere minus maxime vitae.</p>
+        <img src="images/img1.jpg" alt="Imagen de Pexels">
+        <cite>Tomada de <a href="https://www.pexels.com/es-es/" target="_blank">Pexel</a></cite>
+        <h3>Galeria de imagenes</h3>
 
+        <div>
+            <img src="images/img2.jpg" alt="Imagen de pexel">
+            <img src="images/img3.jpeg" alt="Imagen de pexel">
+            <img src="images/img4.jpeg" alt="Imagen de pexel">
+            <img src="images/img5.jpeg" alt="Imagen de pexel">
+            <img src="images/img6.jpeg" alt="Imagen de pexel">
+            <img src="images/img7.jpeg" alt="Imagen de pexel">
+        </div>
     </main>
 
     <footer>
