--- a/index.html
+++ b/index.html
@@ -21,18 +21,22 @@
     <main>
         <h2>Estrategias de viaje de vacaciones</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cumque quae amet eos deleniti dicta, hic aliquam laborum itaque. Impedit, animi cupiditate sit repudiandae harum hic illum praesentium asperiores, non dicta sapiente neque, fugiat eaque architecto facere minus maxime vitae.</p>
-        <img src="images/img1.jpg" alt="Imagen de Pexels">
-        <cite>Tomada de <a href="https://www.pexels.com/es-es/" target="_blank">Pexel</a></cite>
-        <h3>Galeria de imagenes</h3>
+        <div class="image1">
+            <img src="images/img1.jpg" alt="Imagen de Pexels">
+            <cite>Tomada de <a href="https://www.pexels.com/es-es/" target="_blank">Pexel</a></cite>
+            
+        </div>
+       <h3>Galeria de imagenes</h3>
 
-        <div>
+        <div class="galeria">
             <img src="images/img2.jpg" alt="Imagen de pexel">
             <img src="images/img3.jpeg" alt="Imagen de pexel">
             <img src="images/img4.jpeg" alt="Imagen de pexel">
-            <img src="images/img5.jpeg" alt="Imagen de pexel">
+            <img id="lagrasa" src="images/img5.jpeg" alt="Imagen de pexel">
             <img src="images/img6.jpeg" alt="Imagen de pexel">
             <img src="images/img7.jpeg" alt="Imagen de pexel">
         </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim fuga quibusdam sint corrupti, necessitatibus a voluptas ad asperiores quas beatae?</p>
     </main>
 
     <footer>
